# kchvk

./: .dockerignore  .gitignore  DOCUMENTATION.md  Dockerfile  README.md  TEST_REPORT.md  docker-compose.full.yml  docker-compose.yml  main.py  requirements.txt  ИНСТРУКЦИЯ_ЗАПУСКА.md  ОТЧЕТ_ТЕСТИРОВАНИЯ.md
demo/: PRESENTATION.md  demo_script.py
demo_output/comparison/: Jenkinsfile
demo_output/real_python/: .gitlab-ci.yml
examples/: test_runner.py
examples/test_go_project/: calculator_test.go  go.mod  main.go
examples/test_java_project/: pom.xml
examples/test_js_project/: calculator.js  calculator.test.js  index.js  package.json
examples/test_python_project/: calculator.py  main.py  pyproject.toml  test_calculator.py
infrastructure/: docker-compose.yml
infrastructure/jenkins/: plugins.txt
infrastructure/postgres-init/: init-databases.sh
output/: .gitlab-ci.yml  Jenkinsfile
src/: __init__.py
src/analyzers/: __init__.py  models.py  repository_analyzer.py
src/analyzers/detectors/: __init__.py  base_detector.py  go_detector.py  java_detector.py  js_detector.py  python_detector.py
src/generators/: __init__.py  base_generator.py  gitlab_generator.py  jenkins_generator.py
src/templates/: __init__.py
src/templates/gitlab/: go.j2  java.j2  javascript.j2  python.j2
src/templates/jenkins/: go.j2  java.j2  javascript.j2  python.j2
src/utils/: __init__.py  file_utils.py  git_utils.py  reporting.py
test_output/go/: .gitlab-ci.yml  Jenkinsfile
test_output/java/: .gitlab-ci.yml  Jenkinsfile
test_output/js/: .gitlab-ci.yml  Jenkinsfile
(+3 files in other folders)
