[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "test-python-app"
version = "1.0.0"
description = "A sample Python application for testing Self-Deploy CI/CD"
authors = [
    {name = "Test User", email = "test@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.75.0",
    "uvicorn[standard]>=0.17.0",
    "pydantic>=1.9.0",
    "sqlalchemy>=1.4.0",
    "alembic>=1.7.0",
    "python-multipart>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.17.0",
]

[project.urls]
Homepage = "https://github.com/test-user/test-python-app"
Repository = "https://github.com/test-user/test-python-app"
Documentation = "https://test-python-app.readthedocs.io"

[tool.setuptools_scm]
write_to = "test_python_app/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=test_python_app --cov-report=html --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]